Fixed black text in table not showing against black background

--- a/src/main/web/static/css/home.css
+++ b/src/main/web/static/css/home.css
@@ -4,6 +4,7 @@ body  {
   text-align: left;
   background-color: #000000;
   text-decoration: underline;
+  color: #4f9e52;
 }
 
 /* Button Formatting */
